# SIH25-CityFlow

ML/: .gitignore  4x4.net.xml  network.net.xml  pyproject.toml  ql.py  requirements.txt  sarsa.py  simple_dqn.py  yolo.ipynb
ML/graph_algo/: algo.py  city.py
central-fe/: package-lock.json  package.json
mobile-fe/: package-lock.json  package.json  pnpm-lock.yaml
mobile-fe/src/app/: page.tsx
mobile-fe/src/components/: personnel-interface.tsx
