[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dm-tree>=0.1.9",
    "fire>=0.7.1",
    "gymnasium==1.1.1",
    "libsumo>=1.24.0",
    "linear-rl>=0.1",
    "lz4>=4.4.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pettingzoo>=1.25.0",
    "pillow>=11.3.0",
    "pyvirtualdisplay>=3.0",
    "ray[default,tune]>=2.49.1",
    "scipy>=1.16.2",
    "stable-baselines3>=2.7.0",
    "sumo-rl>=1.4.5",
    "sumolib>=1.24.0",
    "supersuit>=3.10.0",
    "torch>=2.8.0",
    "traci>=1.24.0",
    "tree>=0.2.4",
]
